tests/int/use_command/snapshots/integration__int__use_command__error_cases__invalid_depth_0.snap
---
source: tests/int/use_command/error_cases.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "-d"
    - "0"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '0' for '--depth <DEPTH>': depth must be at least 1

For more information, try '--help'.
