tests/int/use_command/snapshots/integration__int__use_command__error_cases__invalid_depth_abc.snap
---
source: tests/int/use_command/error_cases.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "-d"
    - abc
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'abc' for '--depth <DEPTH>': 'abc' is not a valid number

For more information, try '--help'.
