tests/int/use_command/snapshots/integration__int__use_command__error_cases__should_fail_with_parse_error_including_module_context.snap
---
source: tests/int/use_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/broken_syntax
    - use
    - broken
---
success: false
exit_code: 1
----- stdout -----
[31mERROR[39m Error while analyzing module 'broken': Failed to parse file '[MANIFEST_DIR]/fixtures/broken_syntax/src/broken.rs': expected `!`

----- stderr -----
Error: Error analyzing module 'broken' (file '[MANIFEST_DIR]/fixtures/broken_syntax/src/broken.rs'): Failed to parse file '[MANIFEST_DIR]/fixtures/broken_syntax/src/broken.rs': expected `!`
