tests/int/use_command/snapshots/integration__int__use_command__error_cases__should_reject_symlink_escaping_crate_root.snap
---
source: tests/int/use_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - /tmp/.tmprUFepJ
    - use
    - escape
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Resolved path escapes crate root
