tests/int/use_command/snapshots/integration__int__use_command__error_cases__should_report_submodule_parse_error_in_non_recursive_mode.snap
---
source: tests/int/use_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - /tmp/.tmp14TEfZ
    - use
    - good
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Failed to parse file '[ROOT]/src/good/broken.rs': expected `!`
