tests/int/use_command/snapshots/integration__int__use_command__error_cases__should_warn_not_fail_when_lib_broken_during_root_children_top_up.snap
---
source: tests/int/use_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - /tmp/.tmpZ1ReY1
    - use
    - "main::tool::sub"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
WARN crate-root module discovery failed during bare-path top-up for 'tool::sub': Failed to parse file '[ROOT]/src/lib.rs': cannot parse string into token stream
